Fix field spacing

--- a/packages/settings-page/src/restrictions-view/editor.scss
+++ b/packages/settings-page/src/restrictions-view/editor.scss
@@ -142,7 +142,7 @@ $gap4: $gap * 4;
 		}
 	}
 
-	.components-base-control__field {
+	.components-base-control {
 		margin-bottom: $gap2;
 	}
 
